--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,10 @@
 /* region custom bootstrap css */
-body { padding-top: 70px; padding-bottom: 20px } /* for fixed top nav bar */
+body {
+    padding-top: 70px;
+    padding-bottom: 20px
+}
+
+/* for fixed top nav bar */
 /* endregion */
 
 
